<resources>
    <string name="app_name">Reporter</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="click">Click to Select</string>
    <string name="warning">login fail! Username or password is wrong!</string>
    <string name="t">Warning</string>
    <string name="xiugai">Edit</string>
    <string name="name">Name：</string>
    <string name="phone">Phone number：</string>
    <string name="email">Email address：</string>
    <string name="Report_Form">Report Form</string>
    <string name="timeof">Time of loss:</string>
    <string name="location">Location:</string>
    <string name="detail">Detail Info:</string>
    <string name="photo">Photo:</string>
    <string name="submit">submit</string>
    <string name="assistant">            Call this number if you need assistant:</string>
    <string name="no1">Click here to add a new report</string>


    <string name="yes">yes</string>
    <string name="nophone">Phone cannot be none!</string>
    <string name="noemail">Email cannot be none!</string>
    <string name="nolocation">Location cannot be none!</string>
    <string name="noinfor">Information cannot be none!</string>
    <string name="loginfail">Login fail！Username or password is wrong!</string>
    <string name="select">SELECT</string>

    <string name="submitss">Submit success!</string>







    //Strings for bottom navigation view
    <string name="title_home">My profile</string>
    <string name="title_dashboard">My insurance</string>
    <string name="title_notifications">Notifications</string>

    //fragment1_myprofile.xml
    <string name="Info_name_input">Nick</string>
    <string name="Info_phone_input">13301248570</string>
    <string name="Info_email_input">1446463492@qq.com</string>

    //fragment2_listitem.xml
    <string name="fragment2_item_date_input">2019.3.25</string>
    <string name="fragment2_item_date">Date:</string>
    <string name="fragment2_item_name_input">Nick</string>
    <string name="fragment2_item_name">Name:</string>
    <string name="number">Number:</string>


    //fragment3_listitem.xml
    <string name="fragment3_item_date_input">2019.3.26</string>
    <string name="fragment3_item_name_input">Nick</string>
    <string name="fragment3_item_feedback">Feedback:</string>
    <string name="fragment3_item_feedback_input">pass</string>

    //fragment2_report.xml
    <string name="report_info_name_input">Nick</string>
    <string name="report_info_number_input">55667788</string>
    <string name="report_info_date_input">2019.3.24</string>
    <string name="report_info_phone_input">13301248570</string>
    <string name="report_info_type_input">1</string>

    //fragment3_detail.xml
    <string name="Detail_name_input">Nick</string>
    <string name="Detail_number_input">5566778899</string>
    <string name="Detail_date_input">2019.3.24</string>
    <string name="Detail_phone_input">13301248570</string>
    <string name="Detail_type_input">1</string>
    <string name="Detail_detail">yoyoyoyoyoyoyo</string>

    //upload photo
    <string name="Choose">Please choose a way</string>
    <string name="Takepicture">Take a picture</string>
    <string name="Pickpicture">Pick from phone</string>
    <string name="Back">Back</string>

    <string name="hint">Beijing T3</string>
    <string name="hint2">Please help</string>

    <string name="success">Success!</string>

</resources>
