<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg2">
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/Detail_name"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="Name:"
            />
        <TextView
            android:id="@+id/Detail_name_input"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/report_info_name_input"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/Detail_number"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="Number:"
            />
        <TextView
            android:id="@+id/Detail_number_input"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/report_info_number_input"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/Detail_date"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="Date:"
            />
        <TextView
            android:id="@+id/Detail_date_input"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/report_info_date_input"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/Detail_phone"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="Phone:"
            />
        <TextView
            android:id="@+id/Detail_phone_input"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/report_info_phone_input"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/Detail_type"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="Location:"
            />
        <TextView
            android:id="@+id/Detail_type_input"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/report_info_type_input"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/Detail_feedback"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="Feedback:"
            />
        <TextView
            android:id="@+id/Detail_feedback_input"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/fragment3_item_feedback_input"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/Detail_detail"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="Detail:"
            />
        <TextView
            android:id="@+id/Detail_detail_input"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/Detail_detail"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/Detail_assistant"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:text="            Call this number if you need assistant:"
        android:layout_marginTop="80dp"
        android:textSize="17dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="12345678"
        android:layout_gravity="center"
        android:textSize="17dp"
        android:layout_marginTop="10dp"/>
</LinearLayout>
