<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/Info_image"
        android:layout_width="200dp"
        android:layout_height="133dp"
        android:layout_marginTop="60dp"
        app:srcCompat="@drawable/time"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/Info_name"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="Name:"
            />
        <TextView
            android:id="@+id/Info_name_input"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/Info_name_input"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/Info_phone"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="Phone number:"
            />
        <TextView
            android:id="@+id/Info_phone_input"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/Info_phone_input"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/Info_email"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="Email address:"
            />
        <TextView
            android:id="@+id/Info_email_input"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/Info_email_input"
            />
    </LinearLayout>

</LinearLayout>
